[build-system]
requires = [
    "setuptools~=75.8.0",
    # On setuptools 75.9.x we get:
#   Getting requirements to build wheel ... error
#   error: subprocess-exited-with-error
  
#   × Getting requirements to build wheel did not run successfully.
#   │ exit code: 1
#   ╰─> [3 lines of output]
#       [ERRO] You must install numpy before installing aeneas
#       [INFO] Try the following command:
#       [INFO] $ sudo pip install numpy
#       [end of output]
  
#   note: This error originates from a subprocess, and is likely not a problem with pip.
# error: subprocess-exited-with-error

# × Getting requirements to build wheel did not run successfully.
# │ exit code: 1
# ╰─> See above for output.

    "wheel",
    "numpy>=1.9"
]
